# zmo-grafy

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
src/: main.cpp
